[tool.poetry]
name = "kjaymiller"
version = "0.1.0"
description = ""
authors = ["Jay Miller <kjaymiller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.13"
render-engine = "^2022.7.1"
Episode-DL = "^2020.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
