[tool.poetry]
name = "kjaymiller"
version = "0.1.0"
description = ""
authors = ["Jay Miller <kjaymiller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
render-engine = "^2022.7.2"
pytailwindcss = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
selenium = "^4.3.0"
eyes-selenium = "^5.9.0"
pytest-simplehttpserver = "^0.1.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
