[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
description = "The Homepage for my Github Profile"
dependencies = [
    "Jinja2",
    "Episode-DL",
]

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.isort]
profile = "black"
